--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,33 @@
+*{
+    box-sizing: border-box; 
+    /* outline: 1px solid limegreen !important;  */
+}
 body {
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#container {
+.container {
+    padding: 100px;
+}
+
+#holder {
     margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 50%;
+    width: 400px;
+    padding: 10px;
 }
 
 img {
     border-radius: 15px;
-    box-shadow: rgb(35, 35, 35) -5px 5px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 }
 
 .card-holder {
+    cursor: pointer;
     background-color: transparent;
     width: 100px;
     height: 100px;
@@ -45,12 +56,3 @@ img {
 .card-back {
     transform: rotateY(180deg);
 }
-
-
-/* .card-holder-inner > img {
-    border-radius: 15px;
-}
-
-.card-holder:active .card-holder-inner {
-    transform: rotateY(180deg);
-} */
